--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
+/*  
+  акцентный цвет: #2196f3;
+  цвет заголовка: #212121;
+  цвет текста: #757575;
+  светлый цвет тескта: #ffffff;
+  основной шрифт: "Roboto", sans-serif;
+  шрифт в лого: "Raleway", sans-serif;
+  размер шрифта заголовка: 36px;
+  размер основного текста: 14px;
+  */
+
 :root {
   --accent-color: #2196f3;
   --title-color: #212121;
